[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
top_early_console = { git = "ssh://git@github.com/shilei-massclouds/top_early_console.git" }

[build-dependencies]
axconfig = { git = "ssh://git@github.com/shilei-massclouds/axconfig.git" }
